fix align toolbar

--- a/client/style.css
+++ b/client/style.css
@@ -17,7 +17,7 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   gap: 12px;
   width: min(90vw, 110vh, 1100px);
 }
